--- a/_Module/ModuleData/Languages/BR/misc_strings.xml
+++ b/_Module/ModuleData/Languages/BR/misc_strings.xml
@@ -15,5 +15,6 @@
 	  <string id="horse_call_warning.3" text="Você não possui a habilidade necessária para chamar seu cavalo." />
 
 	  <string id="bo_open_inventory" text="Pressione {KEY} para abrir seu inventário" />
+	  <string id="event" text="Evento" />
   </strings>
 </base>
