Some refactors and bug fixes

--- a/_Module/ModuleData/Languages/BR/cheat_strings.xml
+++ b/_Module/ModuleData/Languages/BR/cheat_strings.xml
@@ -8,7 +8,7 @@
     
     <string id="cheat_desc.1" text="Definir velocidade da campanha" />
     <string id="cheat_desc.2" text="Conhecer todos os heróis" />
-    <string id="cheat_desc.3" text="Destruir grupos de desertores" />
+    <string id="cheat_desc.3" text="Remover sistema de deserção" />
     <string id="cheat_desc.4" text="Maximizar nível das paredes do assentamento" />
     <string id="cheat_desc.5" text="Maximizar estatísticas do jogador" />
     <string id="cheat_desc.6" text="Maximizar estatísticas do herói do clã" />
