--- a/_Module/ModuleData/Languages/cheat_strings.xml
+++ b/_Module/ModuleData/Languages/cheat_strings.xml
@@ -8,7 +8,7 @@
 	  
 	  <string id="cheat_desc.1" text="Set campaign speed" />
 	  <string id="cheat_desc.2" text="Know all heroes" />
-	  <string id="cheat_desc.3" text="Destroy deserter parties" />
+	  <string id="cheat_desc.3" text="Remove desertion system" />
 	  <string id="cheat_desc.4" text="Maximize settlement walls" />
 	  <string id="cheat_desc.5" text="Maximize player stats" />
 	  <string id="cheat_desc.6" text="Maximize clan hero stats" />
