--- a/_Module/ModuleData/Languages/BR/str_configs.xml
+++ b/_Module/ModuleData/Languages/BR/str_configs.xml
@@ -26,6 +26,7 @@
     <string id="bo_config_title.6" text="Ativar mais filtros na tela de inventário" />
     <string id="bo_config_title.7" text="Permitir que notáveis se tornem governadores" />
     <string id="bo_config_title.24" text="Desativar perda de relação em execuções" />
+    <string id="bo_config_title.25" text="Ativar diálogos do mod" />
 
     <!-- In Battle -->
     <string id="bo_config_title.8" text="Desativar colisões de ataque para aliados" />
