--- a/_Module/ModuleData/Languages/str_configs.xml
+++ b/_Module/ModuleData/Languages/str_configs.xml
@@ -64,8 +64,8 @@
     <string id="bo_campaign_config_desc.1" text="OBS: Putting a high value will lag your game. Leave 0 for the default game chance." />
     <string id="bo_campaign_config_title.2" text="Global Loot Chance" />
     <string id="bo_campaign_config_desc.2" text="This is the amount of items that can be looted from each enemy casualty after a battle. Leave 0 for the default game number." />
-    <string id="bo_campaign_config_title.3" text="Battle Renown Gain Multiplier" />
-    <string id="bo_campaign_config_title.4" text="Battle Influence Gain Multiplier" />
+    <string id="bo_campaign_config_title.3" text="Renown Gain Multiplier" />
+    <string id="bo_campaign_config_title.4" text="Influence Gain Multiplier" />
     <string id="bo_campaign_config_title.5" text="Battle Morale Gain Multiplier" />
     <string id="bo_campaign_config_title.6" text="Recruitment multiplier for parties" />
     <string id="bo_campaign_config_desc.6" text="Increases the amount that parties can recruit from settlements and the volunteers production. Leave 0 for the default game chance." />
